--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,6 +10,7 @@
     "com.unity.toolchain.linux-x86_64": "2.0.0",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.management": "4.2.1",
+    "com.unity.xr.openxr": "1.3.1",
     "com.unity.xr.windowsmr": "4.6.3",
     "com.valvesoftware.unity.openvr": "file:../Assets/SteamVR/OpenVRUnityXRPackage/Editor/com.valvesoftware.unity.openvr-1.1.4.tgz",
     "com.unity.modules.ai": "1.0.0",
